cmake_minimum_required(VERSION 4.1)
project(cpp1)

set(CMAKE_CXX_STANDARD 20)

add_executable(cpp1
        courseRoster.cpp
        studentSchedule.h
        course.cpp
        student.cpp
        registrar.h
        courseRoster.cpp
        registrar.cpp
        student.h
        app.cpp
        studentSchedule.cpp
        course.h
        courseRoster.h)
